<resources>
    <string name="app_name">Perpetual Calendar</string>
    <string name="choose">Movable feasts in the year:</string>
    <string name="shopping">Shopping Sundays</string>
    <string name="shoppingSingular">Shopping Sunday</string>
    <string name="working">Working days</string>
    <string name="ret">Return</string>
    <string name="shoppingTitle">Shopping Sundays in Poland</string>
    <string name="workingTitle">Working days in Poland</string>
    <string name="since">Since</string>
    <string name="upTill">Up till</string>
    <string name="ashWednesday">Ash Wednesday</string>
    <string name="easterSunday">Easter Sunday</string>
    <string name="corpusChristi">Corpus Christi</string>
    <string name="advent">"First Sunday of Advent"</string>
    <string name="clipboard">Copied to clipboard</string>
    <string name="laterMsg">Select 2020 or later year</string>
    <string name="notSupported">not supported</string>
    <string name="calendarDays">Calendar days</string>
    <string name="workingDays">Working days</string>
    <string name="wrongDifference">Error - the date \"since\" is after \"up till\"</string>
    <string name="inYear">in the year</string>
</resources>